--- a/report/note.tex
+++ b/report/note.tex
@@ -97,7 +97,15 @@
 
 在基于树的方法中，待检测程序会被用对应语言的语法分析器分解为一棵语法分析树或是抽象语法树。之后，则需要用树匹配算法来在其中搜索相似的子树，这些相似子树对应的源代码便是克隆代码对。
 
-DECKARD\cite{Jiang2007}就是一种基于树的方法。
+DECKARD\cite{Jiang2007}就是一种基于树的方法。其主要思想是通过计算AST的特征向量来获取树的结构特征，并采用局部敏感哈希(Locality-Sensitive Hashing, LSH)来高效地对相似的特征向量进行聚类。其大致流程如图\ref{DECKARD}所示。
+
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[height=3cm]{Figures/DECKARD}
+	\caption{DECKARD论文中附有的流程图}
+	\label{DECKARD}
+\end{figure}
 
 \subsection{基于程序依赖图的克隆检测技术}
 
@@ -109,12 +117,26 @@ DECKARD\cite{Jiang2007}就是一种基于树的方法。
 
 基于度量的克隆检测并不直接对代码进行比较，而是会收集代码段的一些度量来组成向量，对这些向量进行处理和比较。
 
-在这类克隆检测技术中，如何对这些度量进行选择和计算就成为了关键的问题。
+在这类克隆检测技术中，如何对这些度量进行选择和计算就成为了关键的问题。单纯基于度量的克隆检测方法往往较为少见，这类方法通常会和基于程序依赖图的方法或基于树的方法结合起来，在原本构造出的结构的基础上进一步获取抽象程度更高的度量，判断克隆。
+
+如\cite{Kim2011}，就是使用了基于语义、路径敏感的静态分析工具，为每一个克隆检测对计算出抽象内存状态，并通过这些抽象内存状态来计算相似性度量，判断是否为克隆对。
 
 %介绍代码克隆检测方法的几个大致的分类，并在每个分类中举例经典的算法进行较为详细的讨论。
 
 \section{代码克隆检测质量分析}
-简单介绍判断代码克隆检测方法质量高低的分析方法。
+我们已经介绍了代码克隆检测的方法和技术的分类。而在实际应用中，为了明确针对该应用场景具体应该使用哪一种代码克隆检测工具，对于这些技术和工具进行比较是很有必要的。
+
+为了对代码克隆检测工具进行评价，论文\cite{Min2019}对克隆检测工具提出了以下这些需求。
+
+\begin{description}
+	\item[可移植性] 代码克隆检测工具应当对多种程序语言具有可移植性，能够通过配置轻易处理这些语言之间的语法差别。
+	\item[准确性] 检测工具应当足够可靠，不应该检测出太多假阳性克隆。
+	\item[召回率] 检测工具应当能够检测出目标系统中的大部分甚至全部克隆对。
+	\item[可扩展性] 检测工具应当能够对大型复杂系统进行检测。
+	\item[鲁棒性] 对于代码编写者对克隆代码作出的各种编辑操作，检测工具应当具有鲁棒性。
+\end{description}
+
+针对这些需求，我们能够设置一些评价指标及其计算方法，借此来对多种克隆检测工具进行比较。
 
 \section{发展趋势}
 在第~\ref{sec:methods}章中，提及了几种代码克隆检测技术的分类。除了上述提到的分类外，许多方法并不是纯粹采用其中的某一种，而是将多种预处理技术混合使用，以达到更好的效果。
